Fix login form wrapping

--- a/admin/static/css/theme.styl
+++ b/admin/static/css/theme.styl
@@ -225,7 +225,7 @@ span.label
       left: auto
 
     > form.login
-      display: inline-block
+      display: block
 
     > ul
       display: none
